# Paper2Agent

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  db.py  models.py
app/agent/: __init__.py  agents.py  orchestrator.py  prompts.py  tools.py
app/api/: __init__.py  graphql_schema.py  routes.py
app/parsers/: __init__.py  paper_parser.py
app/retrieval/: __init__.py  pgvector_store.py  rag.py
templates/: index.html
tests/: test_agent.py
